--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Nurtur3</title>
     <link rel="shortcut icon" href="/static/images/favicon.ico" type="image/x-icon">
     <link href="/static/css/blog/app.css" rel="stylesheet">
-</head>
+<link href="/static/css/app.css" rel="stylesheet"><link href="/static/css/app.css" rel="stylesheet"></head>
 
 <body>
     <div id="editor"></div>
@@ -15,6 +15,6 @@
     <script type="text/javascript" src="/static/js/blog/manifest.js"></script>
     <script type="text/javascript" src="/static/js/blog/vendor.js"></script>
     <script type="text/javascript" src="/static/js/blog/app.js"></script>
-</body>
+<script type="text/javascript" src="/static/js/manifest.js"></script><script type="text/javascript" src="/static/js/vendor.js"></script><script type="text/javascript" src="/static/js/app.js"></script><script type="text/javascript" src="/static/js/manifest.js"></script><script type="text/javascript" src="/static/js/vendor.js"></script><script type="text/javascript" src="/static/js/app.js"></script></body>
 
 </html>
